--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!--Latest compiled and minified JavaScript--> 
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My Blog</title>
+        <title>Rhea Chawla Resume</title>
         <link href="styles.css" rel="stylesheet">
     </head>
     
