--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="section">
             <h1><span>About Me</span></h1>
             <p>
-                Hey! I'm <strong>Rhea</strong>. Coding has changed my world. It's not just about apps. Learning to code gave me <i>problem-solving skills</i> and a way to communicate with others on a technical level. I can also develop websites and use my coding skills to get a better job. And I learned it all by as I practiced coding online using different platforms. Although, I have not created complex projects using python but my interest lies in <strong>Data Science</strong>. Currently, I'm enhancing my skills, required for my future studies by preparing for GATE Exam.  </p>
+                Hey! I'm <strong>Rhea</strong>. Coding has changed my world. It's not just about apps. Learning to code gave me <i>problem-solving skills</i> and a way to communicate with others on a technical level. I can also develop websites and use my coding skills to get a better job. And I learned it all by as I practiced coding online using different platforms. Although, I have not created complex projects using python but my interest lies in <strong>Data Science</strong>.</p>
             <p class="quote">"Declare variables, not war"</p>
         </div>
         <!-- About Me section end -->
